src/test/parse-fail/issue-15914.rs
// compile-flags: -Z parse-only

fn main() {
    let ref
        (); //~ ERROR expected identifier, found `(`
}
